--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
 
   <!-- footer -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- font awasome icon -->
+  <script src="https://kit.fontawesome.com/091fe6ba1a.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="mat-typography">
